Added font and tooltip to edit-box

--- a/test/wv/html_fixtures/motion_events.html
+++ b/test/wv/html_fixtures/motion_events.html
@@ -6,7 +6,7 @@
         <div onclick="scarpeHandler('7-click', arguments[0].button, arguments[0].x, arguments[0].y)" onmouseenter="scarpeHandler('8-hover')" id="5" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
           <div style="height:100%;width:100%;position:relative"><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')" style="width:75px">button 1</button></div>
         </div>
-        <textarea id="9" oninput="scarpeHandler('9-change', this.value)" style="width:500px;height:350px"></textarea>
+        <textarea id="9" oninput="scarpeHandler('9-change', this.value)" onmouseover="scarpeHandler('9-hover')" style="width:500px;height:350px"></textarea>
       </div>
     </div>
     <div id="root-fonts"></div>
