--- a/test/wv/html_fixtures/ruby_racer.html
+++ b/test/wv/html_fixtures/ruby_racer.html
@@ -5,13 +5,13 @@
         <div id="4" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:45.0%;margin:5px">
           <div style="height:100%;width:100%;position:relative">
             <p id="5" style="font-size:14px">Racer 1</p>
-            <textarea id="6" oninput="scarpeHandler('6-change', this.value)" style="width:100%;height:100px">for i in 1..10n  a = "1"nendn</textarea>
+            <textarea id="6" oninput="scarpeHandler('6-change', this.value)" onmouseover="scarpeHandler('6-hover')" style="width:100%;height:100px">for i in 1..10n  a = "1"nendn</textarea>
           </div>
         </div>
         <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:45.0%;margin:5px">
           <div style="height:100%;width:100%;position:relative">
             <p id="8" style="font-size:14px">Racer 2</p>
-            <textarea id="9" oninput="scarpeHandler('9-change', this.value)" style="width:100%;height:100px">10.times don  a = "1"nendn</textarea>
+            <textarea id="9" oninput="scarpeHandler('9-change', this.value)" onmouseover="scarpeHandler('9-hover')" style="width:100%;height:100px">10.times don  a = "1"nendn</textarea>
           </div>
         </div>
       </div>
