--- a/test/wv/html_fixtures/shoes_school.html
+++ b/test/wv/html_fixtures/shoes_school.html
@@ -9,7 +9,7 @@
       <div style="height:100%;width:100%;position:relative">
         <div id="6" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
           <div style="height:100%;width:100%;position:relative">
-            <textarea id="7" oninput="scarpeHandler('7-change', this.value)" style="width:100%;height:300px">n        Shoes.app don          para "Hello World"n        endn      </textarea>
+            <textarea id="7" oninput="scarpeHandler('7-change', this.value)" onmouseover="scarpeHandler('7-hover')" style="width:100%;height:300px">n        Shoes.app don          para "Hello World"n        endn      </textarea>
           </div>
         </div>
         <div id="8" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
