--- a/test/wv/html_fixtures/fonts.html
+++ b/test/wv/html_fixtures/fonts.html
@@ -1,8 +1,8 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
   <div style="height:100%;width:100%;position:relative">
-    <p id="3" style="font:normal normal normal medium Arial;font-size:20px">Hello, world!</p>
-    <p id="4" style="font:normal normal normal medium Courier;font-size:20px">Hello, world!</p>
-    <p id="5" style="font:normal normal normal medium MSGothic;font-size:20px">Hello, world!</p>
+    <p id="3" style="font-size:20px;font-family:Arial">Hello, world!</p>
+    <p id="4" style="font-size:20px;font-family:Courier">Hello, world!</p>
+    <p id="5" style="font-size:20px;font-family:MSGothic">Hello, world!</p>
     <div id="root-fonts"></div>
     <div id="root-alerts"> </div>
   </div>
