--- a/test/wv/html_fixtures/spacing.html
+++ b/test/wv/html_fixtures/spacing.html
@@ -1,16 +1,16 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
   <div style="height:100%;width:100%;position:relative">
-    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:50px;background:purple">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:50px;margin-right:50px;margin-top:50px;margin-bottom:50px;background:purple">
       <div style="height:100%;width:100%;position:relative">
         <p id="4" style="color:#FFFFFF;font-size:12px">with 50px margin</p>
       </div>
     </div>
-    <div id="5" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:10px;margin-right:10px;margin-bottom:20px;background:red">
+    <div id="5" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;background:red">
       <div style="height:100%;width:100%;position:relative">
         <p id="6" style="color:#FFFFFF;font-size:12px">with 10px margin-left and margin-right, and 20px margin-bottom</p>
       </div>
     </div>
-    <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:15px;margin-right:15px;margin-bottom:40px;background:blue">
+    <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:15px;margin-top:15px;margin-bottom:40px;background:blue">
       <div style="height:100%;width:100%;position:relative">
         <p id="8" style="color:#FFFFFF;font-size:12px">with 15px margin-left and margin-right, and 40px margin-bottom</p>
       </div>
