--- a/test/wv/html_fixtures/span.html
+++ b/test/wv/html_fixtures/span.html
@@ -1,6 +1,6 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
   <div style="height:100%;width:100%;position:relative">
-    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin:10px">
+    <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;margin-left:10px;margin-right:10px;margin-top:10px;margin-bottom:10px">
       <div style="height:100%;width:100%;position:relative">
         <p id="5" style="color:#FF0000;font-size:12px"><span class="id_4" style="color:#0000FF;background-color:#008000">TEXT EDITOR</span> * USE ALT-Q TO QUIT</p>
       </div>
