--- a/test/wv/html_fixtures/margin_check.html
+++ b/test/wv/html_fixtures/margin_check.html
@@ -7,7 +7,7 @@
       <div style="height:100%;width:100%;position:relative"><button id="6" onclick="scarpeHandler('6-click')" onmouseover="scarpeHandler('6-hover')" style="margin-left:10px;margin-right:5px;margin-top:25px;margin-bottom:10px">Hash margin</button></div>
     </div>
     <div id="7" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100px;height:100px;background:rgba(255, 255, 0, 255)">
-      <div style="height:100%;width:100%;position:relative"><button id="8" onclick="scarpeHandler('8-click')" onmouseover="scarpeHandler('8-hover')" style="margin:5px;margin-top:30px">Middle Button</button></div>
+      <div style="height:100%;width:100%;position:relative"><button id="8" onclick="scarpeHandler('8-click')" onmouseover="scarpeHandler('8-hover')" style="margin-left:5px;margin-right:5px;margin-top:30px;margin-bottom:5px">Middle Button</button></div>
     </div>
     <div id="9" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100px;height:100px;background:rgba(0, 128, 0, 255)">
       <div style="height:100%;width:100%;position:relative"><button id="10" onclick="scarpeHandler('10-click')" onmouseover="scarpeHandler('10-hover')">OK 2</button></div>
