--- a/test/wv/html_fixtures/button_go_away.html
+++ b/test/wv/html_fixtures/button_go_away.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative"><button id="3" onclick="scarpeHandler('3-click')" onmouseover="scarpeHandler('3-hover')">Go away, button</button>
+  <div style="height:100%;width:100%;position:relative;display:contents"><button id="3" onclick="scarpeHandler('3-click')" onmouseover="scarpeHandler('3-hover')">Go away, button</button>
     <div id="root-fonts"></div>
     <div id="root-alerts"> </div>
   </div>
