--- a/test/wv/html_fixtures/button_styles_default.html
+++ b/test/wv/html_fixtures/button_styles_default.html
@@ -1,5 +1,5 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <p id="3" style="color:#FF0000;font-size:12px">This text should be red<br>
     </p>
     <p id="4" style="color:#008000;font-size:12px">But this text should be green<br>
