--- a/test/wv/html_fixtures/check.html
+++ b/test/wv/html_fixtures/check.html
@@ -1,20 +1,20 @@
 <div id="2" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%;height:100%">
-  <div style="height:100%;width:100%;position:relative">
+  <div style="height:100%;width:100%;position:relative;display:contents">
     <div id="3" style="display:flex;flex-direction:column;align-content:flex-start;justify-content:flex-start;align-items:flex-start">
       <div style="height:100%;width:100%;position:relative">
         <p id="4" style="font-size:12px">Among these films, which do you prefer?</p>
         <div id="5" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
-          <div style="height:100%;width:100%;position:relative"><input type="checkbox" id="6" onclick="scarpeHandler('6-click')" />
+          <div style="height:100%;width:100%;position:relative;display:contents"><input type="checkbox" id="6" onclick="scarpeHandler('6-click')" />
             <p id="7" style="font-size:12px">The Taste of Tea by Katsuhito Ishii</p>
           </div>
         </div>
         <div id="8" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
-          <div style="height:100%;width:100%;position:relative"><input type="checkbox" id="9" onclick="scarpeHandler('9-click')" />
+          <div style="height:100%;width:100%;position:relative;display:contents"><input type="checkbox" id="9" onclick="scarpeHandler('9-click')" />
             <p id="10" style="font-size:12px">Kin-Dza-Dza by Georgi Danelia</p>
           </div>
         </div>
         <div id="11" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
-          <div style="height:100%;width:100%;position:relative"><input type="checkbox" id="12" onclick="scarpeHandler('12-click')" />
+          <div style="height:100%;width:100%;position:relative;display:contents"><input type="checkbox" id="12" onclick="scarpeHandler('12-click')" />
             <p id="13" style="font-size:12px">Children of Heaven by Majid Majidi</p>
           </div>
         </div>
@@ -22,7 +22,7 @@
         <p id="15" style="font-size:12px">The White Balloon by Jafar Panahi</p>
         <p id="16" style="font-size:12px"></p>
         <div id="17" style="display:flex;flex-direction:row;flex-wrap:wrap;align-content:flex-start;justify-content:flex-start;align-items:flex-start;width:100%">
-          <div style="height:100%;width:100%;position:relative"><button id="18" onclick="scarpeHandler('18-click')" onmouseover="scarpeHandler('18-hover')">Mark me</button><button id="19" onclick="scarpeHandler('19-click')" onmouseover="scarpeHandler('19-hover')">unmark me</button></div>
+          <div style="height:100%;width:100%;position:relative;display:contents"><button id="18" onclick="scarpeHandler('18-click')" onmouseover="scarpeHandler('18-hover')">Mark me</button><button id="19" onclick="scarpeHandler('19-click')" onmouseover="scarpeHandler('19-hover')">unmark me</button></div>
         </div>
       </div>
     </div>
